# Replay-Framework

./: .gitignore
.github/workflows/: lint-and-test.yml  replay-gate.yml  replay-nightly.yml
module_replay/: README.md  pyproject.toml  replay_module.py
module_replay/ci/: __init__.py  incident_checklist.py
module_replay/ci/10xcode/: replay-perception-gate.yml  replay-perception-nightly.yml  replay-perception-sweep.yml  replay-perception-viz.yml  runs-on.merge.yml  runs-on.yml
module_replay/ci/infra/: incidents_table.sql
module_replay/configs/baselines/perception/: golden.yaml
module_replay/configs/ci/: paths-filter.yml
module_replay/configs/modules/: checkout_paths.yaml  manipulation.yaml  navigation.yaml  perception.yaml
module_replay/configs/qos/: perception.yaml
module_replay/configs/versions/: default.yaml
module_replay/docs/: CI-ENABLEMENT-GUIDE.md  CODE-WALKTHROUGH.md  E2E-TESTING-HANDOFF.md  PERCEPTION-E2E-VERIFICATION-RUNBOOK.md  PERCEPTION-REPLAY-SPEC.md  TIER3-VIZ-DESIGN.md  isolation-map.md
module_replay/replay/: __init__.py  cli.py  data_manager.py  docker_utils.py  env_setup.py  executor.py  git_utils.py  module_config.py  paths.py  runner.py  version_manager.py
module_replay/replay/compose/: controller.replay.override.yml  planner.replay.override.yml
module_replay/replay/isolation/: __init__.py  launch_args.py  mock_nodes.py  topic_filter.py
module_replay/replay/metrics/: bag_reader.py  base.py  baseline.py  incident_verifier.py  registry.py  replay_faithfulness.py  viz_runner.py
module_replay/replay/metrics/perception/: __init__.py  action_block.py  collision_box.py  depth.py  latency.py  mask_iou.py  overlap.py  pipeline.py  segmentation.py
module_replay/replay/metrics/perception/viz/: __init__.py  overlap_video.py  semantic_overlay.py
module_replay/replay/metrics/report/: __init__.py  generator.py  plots.py  template.html
module_replay/tests/: conftest.py  test_ci_workflows.py  test_cli.py  test_data_manager.py  test_docker_utils.py  test_e2e_perception_validity.py  test_env_setup.py  test_executor.py  test_generator_incident_verdict.py  test_git_utils.py  test_incident_checklist.py  test_incident_cli.py  test_incident_verifier.py  test_integration_smoke.py  test_isolation.py  test_metrics_bag_reader.py  test_metrics_baseline.py  test_metrics_faithfulness.py  test_metrics_perception.py  test_metrics_registry.py  test_metrics_report.py  test_module_config.py  test_overlap.py  test_paths.py  test_paths_filter.py  test_perception_incident_detectors.py  test_report_plots.py  test_runner.py  test_version_manager.py  test_viz.py
