[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "module-replay"
version = "0.1.0"
description = "Local module-wise replay platform for 10xCode"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "PyYAML>=6.0",
    "boto3>=1.34",
    "GitPython>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "moto[s3]>=5.0",
]
metrics = [
    "rosbags>=0.11.3",
    "numpy>=2.0,<3",
    "opencv-python-headless>=4.10,<5",
    "matplotlib>=3.9,<4",
    "bokeh>=3.6,<4",
    "Jinja2>=3.1",
]

[project.scripts]
replay-module = "replay.cli:main"

[tool.setuptools.packages.find]
include = ["replay*"]
exclude = ["tests*"]
