[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "module-replay"
version = "0.1.0"
description = "Local module-wise replay platform for 10xCode"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "PyYAML>=6.0",
    "boto3>=1.34",
    "GitPython>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "moto[s3]>=5.0",
]
metrics = [
    "rosbags>=0.11.3",
    "numpy>=2.0,<3",
    "opencv-python-headless>=4.10,<5",
    # matplotlib (Agg) backs the static report plots (01-16 / A2): latency,
    # pipeline-throughput, and depth heatmaps. Offline pure-Python, no GPU.
    "matplotlib>=3.9,<4",
    "Jinja2>=3.1",
]
# Tier-3 visualization (docs/TIER3-VIZ-DESIGN.md): heavy, opt-in, CPU-only video
# viz. Lazily imported ONLY on the `--run-viz` / `viz` path so the cheap metrics
# gate never pulls these (bifurcation principle). imageio[ffmpeg] is the mp4
# encoder — it bundles a known-good ffmpeg, whereas cv2.VideoWriter(mp4v) can
# silently emit 0-byte files on headless OpenCV wheels. bokeh MOVED here from
# [metrics]: it only ever served the deferred interactive viz, so it was dead
# weight in the cheap metrics install.
viz = [
    "imageio[ffmpeg]>=2.34",
    "bokeh>=3.6,<4",
]

[project.scripts]
replay-module = "replay.cli:main"

[tool.setuptools.packages.find]
include = ["replay*"]
exclude = ["tests*"]
